--- a/developer/Dockerfile
+++ b/developer/Dockerfile
@@ -9,8 +9,8 @@ ENV MAGENTO_VERSION 2.3.6
 ENV INSTALL_DIR /var/www/html
 ENV COMPOSER_HOME /var/www/.composer/
 
-RUN curl -sS https://getcomposer.org/installer | php \
-    && mv composer.phar /usr/local/bin/composer
+RUN curl -o composer.phar https://getcomposer.org/download/latest-1.x/composer.phar \
+    && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 COPY ./auth.json $COMPOSER_HOME
 
 RUN requirements="libpng++-dev libzip-dev libmcrypt-dev libmcrypt4 libcurl3-dev libfreetype6 libjpeg-turbo8 libjpeg-turbo8-dev libfreetype6-dev libicu-dev libxslt1-dev unzip" \
@@ -25,7 +25,8 @@ RUN requirements="libpng++-dev libzip-dev libmcrypt-dev libmcrypt4 libcurl3-dev 
     && docker-php-ext-install intl \
     && docker-php-ext-install xsl \
     && docker-php-ext-install soap \
-    && docker-php-ext-install bcmath
+    && docker-php-ext-install bcmath \
+    && docker-php-ext-install sockets
 
 RUN yes '' | pecl install mcrypt-1.0.3 \
     && echo 'extension=mcrypt.so' > /usr/local/etc/php/conf.d/mcrypt.ini
@@ -53,7 +54,7 @@ COPY ./install-sampledata /usr/local/bin/install-sampledata
 RUN chmod +x /usr/local/bin/install-sampledata
 
 RUN a2enmod rewrite
-RUN echo "memory_limit=2048M" > /usr/local/etc/php/conf.d/memory-limit.ini
+RUN echo "memory_limit=4096M" > /usr/local/etc/php/conf.d/memory-limit.ini
 
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
