chore: Bump magento version on developer/Dockerfile to 2.4.3

--- a/developer/Dockerfile
+++ b/developer/Dockerfile
@@ -1,11 +1,11 @@
-FROM quay.io/alexcheng1982/apache2-php7:7.3.12
+FROM heggies/docker-apache2-php7:7.4.26
 
 LABEL maintainer="alexcheng1982@gmail.com"
-LABEL php_version="7.3.12"
-LABEL magento_version="2.3.6"
-LABEL description="Magento 2.3.6 with PHP 7.3.12"
+LABEL php_version="7.4.26"
+LABEL magento_version="2.4.3"
+LABEL description="Magento 2.4.3 with PHP 7.4.26"
 
-ENV MAGENTO_VERSION 2.3.6
+ENV MAGENTO_VERSION 2.4.3
 ENV INSTALL_DIR /var/www/html
 ENV COMPOSER_HOME /var/www/.composer/
 
@@ -13,12 +13,12 @@ RUN curl -o composer.phar https://getcomposer.org/download/latest-1.x/composer.p
     && mv composer.phar /usr/local/bin/composer && chmod +x /usr/local/bin/composer
 COPY ./auth.json $COMPOSER_HOME
 
-RUN requirements="libpng++-dev libzip-dev libmcrypt-dev libmcrypt4 libcurl3-dev libfreetype6 libjpeg-turbo8 libjpeg-turbo8-dev libfreetype6-dev libicu-dev libxslt1-dev unzip" \
+RUN requirements="libpng++-dev libzip-dev libmcrypt-dev libmcrypt4 libcurl3-dev libfreetype6 libjpeg-turbo8 libjpeg-turbo8-dev libfreetype6-dev libicu-dev libxslt1-dev libonig-dev unzip" \
     && apt-get update \
     && apt-get install -y $requirements \
     && rm -rf /var/lib/apt/lists/* \
     && docker-php-ext-install pdo_mysql \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install gd \
     && docker-php-ext-install mbstring \
     && docker-php-ext-install zip \
@@ -28,8 +28,11 @@ RUN requirements="libpng++-dev libzip-dev libmcrypt-dev libmcrypt4 libcurl3-dev 
     && docker-php-ext-install bcmath \
     && docker-php-ext-install sockets
 
-RUN yes '' | pecl install mcrypt-1.0.3 \
-    && echo 'extension=mcrypt.so' > /usr/local/etc/php/conf.d/mcrypt.ini
+RUN yes '' | pecl install mcrypt-1.0.3
+
+RUN docker-php-ext-enable mcrypt
+
+RUN echo 'extension=mcrypt.so' > /usr/local/etc/php/conf.d/mcrypt.ini
 
 RUN chsh -s /bin/bash www-data
 
@@ -59,10 +62,5 @@ RUN echo "memory_limit=4096M" > /usr/local/etc/php/conf.d/memory-limit.ini
 RUN apt-get clean && rm -rf /var/lib/apt/lists/* /tmp/* /var/tmp/*
 
 WORKDIR $INSTALL_DIR
-
-# Add cron job
-ADD crontab /etc/cron.d/magento2-cron
-RUN chmod 0644 /etc/cron.d/magento2-cron \
-    && crontab -u www-data /etc/cron.d/magento2-cron
 
 VOLUME $INSTALL_DIR
